--- a/style.css
+++ b/style.css
@@ -851,13 +851,14 @@ h5 + .wp-block-columns:not(.columns-content-vertically-centered) {
 
 @media (min-width: 600px) {
   .wp-block-columns.columns-divide-33-66 .wp-block-column:first-child {
-    flex: 33.333%; }
+    flex: calc(33.333% - 1rem);
+    margin-right: 0; }
   .wp-block-columns.columns-divide-33-66 .wp-block-column:nth-child(2) {
     flex: 66.666%; } }
 
 @media (min-width: 600px) {
   .wp-block-columns.columns-divide-66-33 .wp-block-column:first-child {
-    flex: 66.666%; }
+    flex: calc(66.666% - 1rem); }
   .wp-block-columns.columns-divide-66-33 .wp-block-column:nth-child(2) {
     flex: 33.333%; } }
 
